# chatapp-with-websocket

./: README.md  pyproject.toml  requirements.txt
intern/: asgi.py  settings.py  urls.py
myapp/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_auto_20210311_1949.py  0002_document.py
myapp/static/myapp/css/: base.css  friends.css  friends.css.map  friends.scss  index.css  index.css.map  index.scss  setting.css  talk_room.css  talk_room.css.map  talk_room.scss
myapp/templates/myapp/: base.html  chat.html  friends.html  imgchange.html  index.html  login.html  redirect.html  setting.html  signup.html  talk_room.html  valchange.html
staticfiles/myapp/css/: base.css  friends.css  friends.css.map  index.css.map  setting.css  talk_room.css  talk_room.css.map
