[tool.poetry]
name = "chatapp-with-websocket"
version = "0.1.0"
description = ""
authors = ["sota <souta0829win7@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "^3.5.0"
astroid = "^2.11.2"
colorama = "^0.4.4"
Django = "^4.0.3"
channels = "^3.0.4"
websocket = "^0.2.1"
pytz = "^2022.1"
Pillow = "^9.1.0"
channels-redis = "^3.4.0"
wrapt = "^1.14.0"
toml = "^0.10.2"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
pytest = "^7.1.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
